--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <header>
         <script>
             function absolute(){
-                document.getElementById('two').style.position = 'absolute';
+                document.getElementById('three').style.position = 'absolute';
             }
             function static(){
-                document.getElementById('two').style.position = 'static';
+                document.getElementById('three').style.position = 'static';
             }
             function relative(){
-                document.getElementById('two').style.position = 'relative';
+                document.getElementById('three').style.position = 'relative';
             }
             function sticky(){
-                document.getElementById('two').style.position = 'sticky';
+                document.getElementById('three').style.position = 'sticky';
             }
 
             function block(){
